--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "paths": {
       "shared/*": ["src/app/shared/*"],
       "static/*": ["src/static/*"],
-      "storybook/*": ["src/thirdParty/storybook/*"]
+      "storybook/*": ["src/thirdParty/storybook/*"],
+      "styles/*": ["src/styles/*"]
     }
   }
 }
