--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@iconscout/react-unicons": "^0.0.1",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
     "history": "^4.7.2",
