--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,9 @@
     ["module-resolver", {
       "root": ["./src"],
       "alias": {
+        "header": "./src/app/header/",
+        "navigation": "./src/app/navigation/",
+        "pages": "./src/app/pages/",
         "shared": "./src/app/shared/",
         "static": "./src/static/",
         "storybook": "./src/thirdParty/storybook/",
