--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "devWebpack": "webpack --config webpack.dev.js",
     "prodWebpack": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --inline --hot --history-api-fallback --config webpack.dev.js --open",
-
     "build:dev": "npm-run-all remove-dist devWebpack copy-index",
     "build:internal": "INTERNAL=true npm-run-all remove-dist prodWebpack copy-index",
     "build:prod": "npm-run-all remove-dist prodWebpack copy-index"
@@ -94,6 +93,7 @@
     "react-dom": "~16.9.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
+    "react-spring": "^8.0.27",
     "styled-components": "3.2.3"
   }
 }
