--- a/package.json
+++ b/package.json
@@ -88,12 +88,12 @@
     "@iconscout/react-unicons": "^0.0.1",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
+    "framer-motion": "^1.6.14",
     "history": "^4.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
-    "react-spring": "^8.0.27",
     "styled-components": "3.2.3"
   }
 }
