--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
+      "buttons/*": ["src/app/shared/buttons/*"],
       "header/*": ["src/app/header/*"],
       "navigation/*": ["src/app/navigation/*"],
       "pages/*": ["src/app/pages/*"],
