--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.2",
-    "@types/react": "^16.8.23",
+    "@types/react": "^16.9.11",
     "@types/react-dom": "^16.8.4",
+    "@types/react-lottie": "^1.2.3",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-syntax-highlighter": "^11.0.1",
     "@types/storybook__react": "^4.0.2",
