--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "es6",
-    "moduleResolution": "node",
-    "target": "es5",
-    "jsx": "react",
     "allowJs": true,
     "baseUrl": ".",
+    "esModuleInterop": true,
+    "jsx": "react",
+    "module": "es6",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "outDir": "./dist/",
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "target": "es5",
     "paths": {
       "buttons/*": ["src/app/shared/buttons/*"],
       "header/*": ["src/app/header/*"],
+      "lottie/*": ["src/thirdParty/lottie/*"],
       "navigation/*": ["src/app/navigation/*"],
       "pages/*": ["src/app/pages/*"],
       "shared/*": ["src/app/shared/*"],
