--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "paths": {
       "buttons/*": ["src/app/shared/buttons/*"],
       "header/*": ["src/app/header/*"],
+      "hooks/*": ["src/hooks/*"],
       "lottie/*": ["src/thirdParty/lottie/*"],
       "navigation/*": ["src/app/navigation/*"],
       "pages/*": ["src/app/pages/*"],
