--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.3.1",
     "jest": "24.8.0",
+    "jest-canvas-mock": "^2.1.2",
     "jest-enzyme": "^4.0.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.12.0",
