--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@sambego/storybook-styles": "^1.0.0",
     "@storybook/addon-a11y": "^5.1.3",
     "@storybook/addon-actions": "^5.1.3",
     "@storybook/addon-backgrounds": "^5.1.3",
@@ -86,7 +87,6 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@iconscout/react-unicons": "^0.0.1",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
     "framer-motion": "^1.6.14",
