--- a/.babelrc
+++ b/.babelrc
@@ -28,7 +28,8 @@
         "shared": "./src/app/shared/",
         "static": "./src/static/",
         "storybook": "./src/thirdParty/storybook/",
-        "styles": "./src/styles/"
+        "styles": "./src/styles/",
+        "typography": "./src/app/shared/typography/"
       }
     }]
   ]
