--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "copy-index": "cp src/index.html dist/index.html",
     "devWebpack": "webpack --config webpack.dev.js",
     "prodWebpack": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --inline --hot --history-api-fallback --config webpack.dev.js --open",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "build:dev": "npm-run-all remove-dist devWebpack copy-index",
     "build:prod": "npm-run-all remove-dist prodWebpack copy-index"
   },
