--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.8.4",
     "@types/react-lottie": "^1.2.3",
-    "@types/react-router-dom": "^4.3.4",
+    "@types/react-router-dom": "^5.1.2",
     "@types/react-syntax-highlighter": "^11.0.1",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
@@ -75,6 +75,7 @@
     "postcss-loader": "^3.0.0",
     "react-markdown": "^4.2.2",
     "react-syntax-highlighter": "^11.0.2",
+    "react-transition-group": "^4.3.0",
     "sass-loader": "^7.1.0",
     "storybook-addon-state": "^1.0.2",
     "style-loader": "^0.23.1",
@@ -97,8 +98,8 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-lottie": "^1.2.3",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "styled-components": "3.2.3"
   }
 }
