working on gapi

--- a/.babelrc
+++ b/.babelrc
@@ -20,6 +20,7 @@
       "alias": {
         "api": "./src/api/",
         "buttons": "./src/app/shared/buttons/",
+        "google": "./src/thirdParty/google/",
         "header": "./src/app/header/",
         "hooks": "./src/hooks/",
         "icons": "./src/app/shared/icons/",
