--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@storybook/react": "^5.2.5",
     "@testing-library/react-hooks": "^3.1.1",
     "@types/enzyme": "^3.10.3",
+    "@types/gapi": "^0.0.39",
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.2",
