--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   "dependencies": {
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
+    "dotenv-webpack": "^1.7.0",
     "framer-motion": "^1.6.14",
     "history": "^4.7.2",
     "lord-icon-element": "^1.1.5",
