--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
     "@storybook/react": "^5.2.5",
     "@testing-library/react-hooks": "^3.1.1",
     "@types/enzyme": "^3.10.3",
-    "@types/gapi": "^0.0.39",
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.2",
     "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.8.4",
+    "@types/react-dom": "^16.9.4",
     "@types/react-lottie": "^1.2.3",
     "@types/react-router-dom": "^5.1.2",
     "@types/react-syntax-highlighter": "^11.0.1",
@@ -97,8 +96,8 @@
     "history": "^4.7.2",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "^0.0.0-experimental-38dd17ab9",
+    "react-dom": "^0.0.0-experimental-38dd17ab9",
     "react-lottie": "^1.2.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
