--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.2",
+    "@types/numeral": "^0.0.26",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/react-lottie": "^1.2.3",
@@ -96,6 +97,8 @@
     "history": "^4.7.2",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "react": "^0.0.0-experimental-38dd17ab9",
     "react-dom": "^0.0.0-experimental-38dd17ab9",
     "react-lottie": "^1.2.3",
