--- a/.babelrc
+++ b/.babelrc
@@ -24,9 +24,11 @@
         "header": "./src/app/header/",
         "hooks": "./src/hooks/",
         "icons": "./src/app/shared/icons/",
+        "initialize": "./src/app/initialize/",
         "lotty": "./src/thirdParty/lotty/",
         "navigation": "./src/app/navigation/",
         "pages": "./src/app/pages/",
+        "routing": "./src/app/routing/",
         "shared": "./src/app/shared/",
         "static": "./src/static/",
         "storybook": "./src/thirdParty/storybook/",
