--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "paths": {
       "api/*": ["src/api/*"],
       "buttons/*": ["src/app/shared/buttons/*"],
-      "google/*": ["src/thirdParty/google/*"],
+      "gapi/*": ["src/thirdParty/gapi/*"],
       "header/*": ["src/app/header/*"],
       "hooks/*": ["src/hooks/*"],
       "icons/*": ["src/app/shared/icons/*"],
