--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,21 +13,22 @@
     "target": "es5",
     "paths": {
       "api/*": ["src/api/*"],
-      "buttons/*": ["src/app/shared/buttons/*"],
+      "buttons/*": ["src/spa/app/shared/buttons/*"],
       "gapi/*": ["src/thirdParty/gapi/*"],
-      "header/*": ["src/app/header/*"],
+      "header/*": ["src/spa/layout/header/*"],
       "hooks/*": ["src/hooks/*"],
-      "icons/*": ["src/app/shared/icons/*"],
-      "initialize/*": ["src/app/initialize/*"],
+      "icons/*": ["src/spa/app/shared/icons/*"],
+      "initialize/*": ["src/spa/app/initializeApp/*"],
+      "layout/*": ["src/spa/layout/*"],
       "lotty/*": ["src/thirdParty/lotty/*"],
-      "navigation/*": ["src/app/navigation/*"],
-      "pages/*": ["src/app/pages/*"],
-      "routing/*": ["src/app/routing/*"],
-      "shared/*": ["src/app/shared/*"],
+      "navigation/*": ["src/spa/layout/navigation/*"],
+      "pages/*": ["src/spa/app/pages/*"],
+      "routing/*": ["src/spa/app/routing/*"],
+      "shared/*": ["src/spa/app/shared/*"],
       "static/*": ["src/static/*"],
       "storybook/*": ["src/thirdParty/storybook/*"],
       "styles/*": ["src/styles/*"],
-      "typography/*": ["src/app/shared/typography/*"],
+      "typography/*": ["src/spa/app/shared/typography/*"],
       "types/*": ["src/types/*"]
     }
   }
