--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,13 @@
     "target": "es5",
     "paths": {
       "api/*": ["src/api/*"],
+      "app/*": ["src/spa/app/*"],
       "buttons/*": ["src/spa/app/shared/buttons/*"],
       "gapi/*": ["src/thirdParty/gapi/*"],
       "header/*": ["src/spa/layout/header/*"],
       "hooks/*": ["src/hooks/*"],
       "icons/*": ["src/spa/app/shared/icons/*"],
-      "initialize/*": ["src/spa/app/initializeApp/*"],
+      "initializeApp/*": ["src/spa/app/initializeApp/*"],
       "layout/*": ["src/spa/layout/*"],
       "lotty/*": ["src/thirdParty/lotty/*"],
       "navigation/*": ["src/spa/layout/navigation/*"],
