--- a/.babelrc
+++ b/.babelrc
@@ -19,12 +19,13 @@
       "root": ["./src"],
       "alias": {
         "api": "./src/api/",
+        "app": "./src/spa/app/",
         "buttons": "./src/spa/app/shared/buttons/",
         "gapi": "./src/thirdParty/gapi/",
         "header": "./src/spa/app/header/",
         "hooks": "./src/hooks/",
         "icons": "./src/spa/app/shared/icons/",
-        "initialize": "./src/spa/app/initializeApp/",
+        "initializeApp": "./src/spa/app/initializeApp/",
         "layout": "./src/spa/layout/",
         "lotty": "./src/thirdParty/lotty/",
         "navigation": "./src/spa/layout/navigation/",
