--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "paths": {
       "api/*": ["src/api/*"],
       "app/*": ["src/spa/app/*"],
+      "assets/*": ["src/assets/*"],
       "buttons/*": ["src/spa/app/shared/buttons/*"],
       "gapi/*": ["src/thirdParty/gapi/*"],
       "header/*": ["src/spa/layout/header/*"],
