--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
           "node": "current"
         }
       }
-    ]
+    ],
+    "@babel/preset-typescript"
   ],
   "plugins": [
     ["babel-plugin-transform-builtin-extend", {
