--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "copy-index": "cp src/index.html dist/index.html",
     "devWebpack": "webpack --config webpack.dev.js",
     "prodWebpack": "webpack --config webpack.prod.js",
+    "foo": "nodemon server/index.ts --exec babel-node",
     "start": "webpack-dev-server --config webpack.dev.js",
     "build:dev": "npm-run-all remove-dist devWebpack copy-index",
     "build:prod": "npm-run-all remove-dist prodWebpack copy-index"
@@ -18,10 +19,12 @@
   ],
   "license": "UNLICENSED",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.7.4",
     "@sambego/storybook-styles": "^1.0.0",
     "@storybook/addon-a11y": "^5.2.5",
     "@storybook/addon-actions": "^5.2.5",
@@ -46,8 +49,6 @@
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "babel-cli": "7.0.0-beta.3",
-    "babel-core": "^6.26.3",
     "babel-eslint": "7",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.6",
@@ -72,6 +73,7 @@
     "jest-enzyme": "^4.0.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.12.0",
+    "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.3",
     "postcss-loader": "^3.0.0",
     "react-markdown": "^4.2.2",
@@ -90,11 +92,14 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "apollo-server-express": "^2.9.12",
     "axios": "^0.19.0",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
     "dotenv-webpack": "^1.7.0",
+    "express": "^4.17.1",
     "framer-motion": "^1.6.14",
+    "graphql": "^14.5.8",
     "history": "^4.7.2",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
