--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-lottie": "^1.2.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "styled-components": "3.2.3"
+    "styled-components": "3.2.3",
+    "uuid": "^3.3.3"
   }
 }
