--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-router-dom": "^5.1.2",
     "@types/react-syntax-highlighter": "^11.0.1",
     "@types/storybook__react": "^4.0.2",
+    "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "babel-eslint": "7",
