--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
     "dotenv-webpack": "^1.7.0",
+    "eslint-plugin-graphql": "^3.1.0",
     "express": "^4.17.1",
     "framer-motion": "^1.6.14",
     "graphql": "^14.5.8",
