--- a/package.json
+++ b/package.json
@@ -62,15 +62,16 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.16",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^2.1.2",
+    "eslint-plugin-graphql": "^3.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^1.1.11",
-    "graphql-import": "^0.7.1",
+    "graphql-import-loader": "^0.2.1",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.3.1",
     "jest": "24.8.0",
@@ -103,7 +104,6 @@
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
     "dotenv-webpack": "^1.7.0",
-    "eslint-plugin-graphql": "^3.1.0",
     "express": "^4.17.1",
     "framer-motion": "^1.6.14",
     "graphql": "^14.5.8",
