--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^1.1.11",
-    "graphql-import-loader": "^0.2.1",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.3.1",
     "jest": "24.8.0",
@@ -107,6 +106,7 @@
     "express": "^4.17.1",
     "framer-motion": "^1.6.14",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
