--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "test": "jest",
     "storybook": "start-storybook",
     "build-storybook": "build-storybook -c .storybook -o .out",
-    "remove-dist": "rm -rf dist",
-    "copy-index": "cp src/index.html dist/index.html",
-    "devWebpack": "webpack --config src/build/webpack.development.js",
-    "prodWebpack": "webpack --config src/build/webpack.production.js",
-    "start": "webpack-dev-server --config src/build/webpack.development.js",
+    "remove-dist": "rm -rf src/dist",
+    "copy-index": "cp src/index.html src/dist/index.html",
+    "devWebpack": "webpack --config src/build/webpack.src.development.js",
+    "prodWebpack": "webpack --config src/build/webpack.src.production.js",
+    "start": "webpack-dev-server --config src/build/webpack.src.development.js",
     "build:devApp": "npm-run-all remove-dist devWebpack copy-index",
     "build:prodApp": "npm-run-all remove-dist prodWebpack copy-index",
-    "build:devServer": "webpack --config server/build/webpack.development.js",
-    "build:prodServer": "webpack --config server/build/webpack.production.js",
+    "build:devServer": "webpack --config server/build/webpack.src.development.js",
+    "build:prodServer": "webpack --config server/build/webpack.src.production.js",
     "run:server": "node server/dist/server"
   },
   "authors": [
