--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "lottie-web": "^5.5.9",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
+    "prisma": "^1.34.10",
     "react": "^0.0.0-experimental-38dd17ab9",
     "react-dom": "^0.0.0-experimental-38dd17ab9",
     "react-lottie": "^1.2.3",
