--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devWebpack": "webpack --config src/build/webpack.src.development.js",
     "prodWebpack": "webpack --config src/build/webpack.src.production.js",
     "start": "webpack-dev-server --config src/build/webpack.src.development.js",
+    "get-schema": "graphql get-schema -p prisma",
     "build:devApp": "npm-run-all remove-dist devWebpack copy-index",
     "build:prodApp": "npm-run-all remove-dist prodWebpack copy-index",
     "build:devServer": "webpack --config server/build/webpack.server.development.js",
@@ -106,6 +107,7 @@
     "express": "^4.17.1",
     "framer-motion": "^1.6.14",
     "graphql": "^14.5.8",
+    "graphql-cli": "^3.0.14",
     "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
     "lord-icon-element": "^1.1.5",
@@ -113,6 +115,7 @@
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "prisma": "^1.34.10",
+    "prisma-binding": "^2.3.16",
     "react": "^0.0.0-experimental-38dd17ab9",
     "react-dom": "^0.0.0-experimental-38dd17ab9",
     "react-lottie": "^1.2.3",
