--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "devWebpack": "webpack --config src/build/webpack.src.development.js",
     "prodWebpack": "webpack --config src/build/webpack.src.production.js",
     "start": "webpack-dev-server --config src/build/webpack.src.development.js",
-    "get-schema": "graphql get-schema -p prisma",
+    "get-schema": "graphql get-schema",
     "build:devApp": "npm-run-all remove-dist devWebpack copy-index",
     "build:prodApp": "npm-run-all remove-dist prodWebpack copy-index",
     "build:devServer": "webpack --config server/build/webpack.server.development.js",
@@ -102,6 +102,7 @@
     "apollo-server-express": "^2.9.12",
     "axios": "^0.19.0",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
+    "bcryptjs": "^2.4.3",
     "connected-react-router": "^5.0.1",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
