--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "devWebpack": "webpack --config src/build/webpack.src.development.js",
     "prodWebpack": "webpack --config src/build/webpack.src.production.js",
     "start": "webpack-dev-server --config src/build/webpack.src.development.js",
-    "get-schema": "graphql get-schema",
+    "get-schema": "graphql get-schema -p prisma",
     "build:devApp": "npm-run-all remove-dist devWebpack copy-index",
     "build:prodApp": "npm-run-all remove-dist prodWebpack copy-index",
     "build:devServer": "webpack --config server/build/webpack.server.development.js",
@@ -111,6 +111,7 @@
     "graphql-cli": "^3.0.14",
     "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
+    "jsonwebtoken": "^8.5.1",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
     "moment": "^2.24.0",
