--- a/server/prisma/prisma.yml
+++ b/server/prisma/prisma.yml
@@ -1,3 +1,6 @@
 endpoint: http://localhost:4466
-datamodel: datamodel.graphql
+datamodel:
+  - ../schema/comment/commentModel.graphql
+  - ../schema/post/postModel.graphql
+  - ../schema/user/userModel.graphql
 #secret: '%cx^&2DYo9pf@11E6gt^'
