--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^12.6.2",
     "@types/numeral": "^0.0.26",
     "@types/react": "^16.9.11",
