--- a/server/prisma/prisma.yml
+++ b/server/prisma/prisma.yml
@@ -1,4 +1,4 @@
-endpoint: http://localhost:4466
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel:
   - ../schema/comment/commentModel.graphql
   - ../schema/post/postModel.graphql
