--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,21 +23,27 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^12.6.2",
+    "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "babel-eslint": "7",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^5.16",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-graphql": "^3.1.0",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^23.2.0",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.3",
+    "ts-jest": "^24.2.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "webpack": "^4.16.5",
@@ -52,6 +58,7 @@
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "dotenv-webpack": "^1.7.0",
+    "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-cli": "^3.0.14",
     "graphql-tag": "^2.10.1",
