--- a/back-end/.babelrc
+++ b/back-end/.babelrc
@@ -16,6 +16,9 @@
     ["module-resolver", {
       "root": ["./src"],
       "alias": {
+        "generated": "./src/generated/",
+        "schema": "./src/schema/",
+        "types": "./src/types/",
         "utils": "./src/utils/"
       }
     }]
