--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,10 @@
   "authors": [
     "Jimmy Emery"
   ],
+  "engines": {
+    "node": "13.5.0",
+    "yarn": "1.21.1"
+  },
   "license": "UNLICENSED",
   "devDependencies": {
     "@babel/cli": "^7.7.4",
