--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,7 +10,8 @@
     "build:dev": "npm-run-all remove-dist webpack:dev",
     "build:prod": "npm-run-all remove-dist webpack:prod",
     "run:dev": "env-cmd -f dev.env nodemon dist/index",
-    "start": "webpack-dev-server --config src/build/webpack.src.development.js"
+    "heroku-postbuild": "npm-run-all build:prod",
+    "start": "env-cmd -f prod.env node dist/index"
   },
   "authors": [
     "Jimmy Emery"
