--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myBoard",
+  "name": "myBord",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -7,11 +7,11 @@
     "build-storybook": "build-storybook -c .storybook -o .out",
     "remove-dist": "rm -rf dist",
     "copy-index": "cp src/index.html dist/index.html",
-    "devWebpack": "webpack --config webpack.dev.js",
-    "prodWebpack": "webpack --config webpack.prod.js",
+    "webpack:dev": "webpack --config webpack.dev.js",
+    "webpack:prod": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --config webpack.dev.js",
-    "build:dev": "npm-run-all remove-dist devWebpack copy-index",
-    "build:prod": "npm-run-all remove-dist prodWebpack copy-index"
+    "build:dev": "npm-run-all remove-dist webpack:dev copy-index",
+    "build:prod": "npm-run-all remove-dist webpack:prod copy-index"
   },
   "authors": [
     "Jimmy Emery"
@@ -57,7 +57,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.16",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.17.2",
@@ -90,11 +90,14 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.7",
     "axios": "^0.19.0",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
     "dotenv-webpack": "^1.7.0",
     "framer-motion": "^1.6.14",
+    "graphql": "^14.5.8",
     "history": "^4.7.2",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
