--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "jest": "24.8.0",
     "jest-canvas-mock": "^2.1.2",
     "jest-enzyme": "^4.0.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.3",
@@ -77,7 +79,6 @@
     "react-markdown": "^4.2.2",
     "react-syntax-highlighter": "^11.0.2",
     "react-transition-group": "^4.3.0",
-    "sass-loader": "^7.1.0",
     "storybook-addon-state": "^1.0.2",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
