--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "antd": "^3.26.6",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.0",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
