--- a/package.json
+++ b/package.json
@@ -93,7 +93,9 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "antd": "^3.26.6",
-    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "axios": "^0.19.0",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
