--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GAPI_KEY=AIzaSyCY03KahdjU3Cyy1lrp-mBhvFeM_qDwRX8
 GAPI_CLIENT_ID=901995155926-9ldflhgbid0ugcci1eblj8bhd8rh9cv5.apps.googleusercontent.com
+URI=http://localhost:4000/graphql
