--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
       "assets/*": ["src/assets/*"],
       "buttons/*": ["src/spa/shared/buttons/*"],
       "context/*": ["src/context/*"],
+      "fallbacks/*": ["src/spa/shared/fallbacks/*"],
       "forms/*": ["src/spa/shared/forms/*"],
+      "framerMotion/*": ["src/thirdParty/framerMotion/*"],
       "header/*": ["src/spa/app/layout/header/*"],
       "hooks/*": ["src/hooks/*"],
       "icons/*": ["src/spa/shared/icons/*"],
