--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@apollo/react-hooks": "^3.1.3",
     "antd": "^3.26.6",
     "apollo-cache-inmemory": "^1.6.5",
