--- a/package.json
+++ b/package.json
@@ -98,7 +98,10 @@
     "antd": "^3.26.6",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "axios": "^0.19.2",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
@@ -113,6 +116,7 @@
     "react-dom": "^0.0.0-experimental-38dd17ab9",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "styled-components": "3.2.3"
+    "styled-components": "3.2.3",
+    "subscriptions-transport-ws": "^0.9.16"
   }
 }
