--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "app/*": ["src/spa/app/*"],
       "assets/*": ["src/assets/*"],
       "buttons/*": ["src/spa/shared/buttons/*"],
+      "cards/*": ["src/spa/shared/cards/*"],
       "context/*": ["src/context/*"],
       "fallbacks/*": ["src/spa/shared/fallbacks/*"],
       "forms/*": ["src/spa/shared/forms/*"],
