--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "file-loader": "^1.1.11",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.3.1",
