--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@apollo/react-hooks": "^3.1.3",
+    "@types/lodash": "^4.14.155",
     "antd": "^3.26.6",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -111,6 +112,7 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.15",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
     "react": "^0.0.0-experimental-38dd17ab9",
