--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "copy-index": "cp src/index.html dist/index.html",
     "webpack:dev": "webpack --config webpack.dev.js",
     "webpack:prod": "webpack --config webpack.prod.js",
-    "start": "NODE_ENV=DEV webpack-dev-server --config webpack.dev.js",
     "build:dev": "npm-run-all remove-dist webpack:dev copy-index",
-    "build:prod": "npm-run-all remove-dist webpack:prod copy-index"
+    "build:prod": "npm-run-all remove-dist webpack:prod copy-index",
+    "run:dev": "NODE_ENV=DEV webpack-dev-server --config webpack.dev.js"
   },
   "authors": [
     "Jimmy Emery"
