--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "webpack:prod": "webpack --config webpack.prod.js",
     "build:dev": "npm-run-all remove-dist webpack:dev copy-index",
     "build:prod": "npm-run-all remove-dist webpack:prod copy-index",
-    "run:dev": "NODE_ENV=DEV webpack-dev-server --config webpack.dev.js"
+    "run:dev": "NODE_ENV=DEV webpack-dev-server --config webpack.dev.js",
+    "run:prod": "NODE_ENV=PROD webpack-dev-server --config webpack.dev.js"
   },
   "authors": [
     "Jimmy Emery"
