--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "fallbacks/*": ["src/spa/shared/fallbacks/*"],
       "forms/*": ["src/spa/shared/forms/*"],
       "framerMotion/*": ["src/thirdParty/framerMotion/*"],
+      "header/*": ["src/spa/app/layout/header/*"],
       "hooks/*": ["src/hooks/*"],
       "icons/*": ["src/spa/shared/icons/*"],
       "inputs/*": ["src/spa/shared/inputs/*"],
@@ -32,7 +33,6 @@
       "navigation/*": ["src/spa/app/layout/navigation/*"],
       "pages/*": ["src/spa/app/pages/*"],
       "portal/*": ["src/spa/shared/portal/*"],
-      "profile/*": ["src/spa/app/layout/profile/*"],
       "routing/*": ["src/spa/app/routing/*"],
       "schema/*": ["src/server/schema/*"],
       "server/*": ["src/server/*"],
