--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "copy-index": "cp src/index.html dist/index.html",
     "webpack:dev": "webpack --config webpack.dev.js",
     "webpack:prod": "webpack --config webpack.prod.js",
-    "build:dev": "NODE_ENV=DEV npm-run-all remove-dist webpack:dev copy-index",
-    "build:prod": "NODE_ENV=PROD npm-run-all remove-dist webpack:prod copy-index",
-    "run:dev": "NODE_ENV=DEV webpack-dev-server --config webpack.dev.js",
-    "run:prod": "NODE_ENV=PROD webpack-dev-server --config webpack.dev.js"
+    "build:dev-client": "NODE_ENV=DEV npm-run-all remove-dist webpack:dev copy-index",
+    "build:prod-client": "NODE_ENV=PROD npm-run-all remove-dist webpack:prod copy-index",
+    "run-local:local-client": "NODE_ENV=LOCAL webpack-dev-server --config webpack.dev.js",
+    "run-local:dev-client": "NODE_ENV=LOCAL webpack-dev-server --config webpack.dev.js"
   },
   "authors": [
     "Jimmy Emery"
