--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,7 @@
     ["module-resolver", {
       "root": ["./src"],
       "alias": {
+        "about": "./src/spa/shared/about/",
         "api": "./src/api/",
         "app": "./src/spa/app/",
         "assets": "./src/assets/",
@@ -25,6 +26,7 @@
         "cards": "./src/spa/shared/cards/",
         "context": "./src/context/",
         "fallbacks": "./src/spa/shared/fallbacks/",
+        "footer": "./src/spa/shared/footer/",
         "forms": "./src/spa/shared/forms/",
         "framerMotion": "./src/thirdParty/framerMotion/",
         "header": "./src/spa/app/layout/header/",
