--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "connected-react-router": "^5.0.1",
     "dotenv-webpack": "^1.7.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^1.6.14",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
