--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "@testing-library/react-hooks": "^3.1.1",
+    "@types/draft-js": "^0.10.43",
     "@types/enzyme": "^3.10.3",
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
