updating component design

--- a/.babelrc
+++ b/.babelrc
@@ -22,16 +22,17 @@
         "api": "./src/api/",
         "app": "./src/spa/app/",
         "assets": "./src/assets/",
-        "buttons": "./src/spa/shared/buttons/",
+        "buttons": "./src/spa/components/molecules/buttons/",
         "cards": "./src/spa/shared/cards/",
         "context": "./src/context/",
         "fallbacks": "./src/spa/shared/fallbacks/",
         "footer": "./src/spa/shared/footer/",
         "forms": "./src/spa/shared/forms/",
         "framerMotion": "./src/thirdParty/framerMotion/",
+        "graphics": "./src/spa/components/atoms/graphics/",
         "header": "./src/spa/app/layout/header/",
         "hooks": "./src/hooks/",
-        "icons": "./src/spa/shared/icons/",
+        "icon": "./src/spa/components/atoms/icon/",
         "inputs": "./src/spa/shared/inputs/",
         "landing": "./src/spa/landing/",
         "layout": "./src/spa/app/layout/",
