--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "target": "es5",
     "paths": {
       "about/*": ["src/spa/shared/about/*"],
+      "alert/*": ["src/spa/components/molecules/alert/*"],
+      "animations/*": ["src/spa/components/atoms/animations/*"],
       "api/*": ["src/api/*"],
       "app/*": ["src/spa/app/*"],
       "assets/*": ["src/assets/*"],
@@ -22,7 +24,6 @@
       "fallbacks/*": ["src/spa/shared/fallbacks/*"],
       "footer/*": ["src/spa/shared/footer/*"],
       "forms/*": ["src/spa/shared/forms/*"],
-      "framerMotion/*": ["src/thirdParty/framerMotion/*"],
       "graphics/*": ["src/spa/components/atoms/graphics/*"],
       "header/*": ["src/spa/app/layout/header/*"],
       "hooks/*": ["src/hooks/*"],
@@ -30,12 +31,14 @@
       "inputs/*": ["src/spa/shared/inputs/*"],
       "landing/*": ["src/spa/landing/*"],
       "layout/*": ["src/spa/app/layout/*"],
-      "lotty/*": ["src/thirdParty/lotty/*"],
+      "lottiePlayer/*": ["src/spa/components/atoms/lottiePlayer/*"],
+      "lotties/*": ["src/spa/components/atoms/lotties/*"],
       "mockData/*": ["src/mockData/*"],
       "modals/*": ["src/spa/shared/modals/*"],
       "navigation/*": ["src/spa/app/layout/navigation/*"],
       "pages/*": ["src/spa/app/pages/*"],
-      "portal/*": ["src/spa/shared/portal/*"],
+      "popOver/*": ["src/spa/components/atoms/popOver/*"],
+      "portal/*": ["src/spa/components/atoms/portal/*"],
       "routing/*": ["src/spa/app/routing/*"],
       "schema/*": ["src/server/schema/*"],
       "server/*": ["src/server/*"],
